@@ -81,7 +81,7 @@ void data_close(wzd_context_t * context)
 {
   int ret;
 
-#ifdef HAVE_OPENSSL
+#if defined(HAVE_OPENSSL) || defined(HAVE_GNUTLS)
   if (context->ssl.data_mode == TLS_PRIV)
     ret = tls_close_data(context);
 #endif
@@ -167,7 +167,7 @@ int data_execute(wzd_context_t * context, fd_set *fdr, fd_set *fdw)
   case TOK_RETR:
     n = file_read(context->current_action.current_file,context->data_buffer,mainConfig->data_buffer_length);
     if (n>0) {
-#ifdef HAVE_OPENSSL
+#if defined(HAVE_OPENSSL) || defined(HAVE_GNUTLS)
       if (context->ssl.data_mode == TLS_CLEAR)
         ret = clear_write(context->datafd,context->data_buffer,(size_t)n,0,HARD_XFER_TIMEOUT,context);
       else
@@ -232,7 +232,7 @@ out_err(LEVEL_INFO,"Send 226 message returned %d\n",ret);
     }
     break;
   case TOK_STOR:
-#ifdef HAVE_OPENSSL
+#if defined(HAVE_OPENSSL) || defined(HAVE_GNUTLS)
       if (context->ssl.data_mode == TLS_CLEAR)
         n = clear_read(context->datafd,context->data_buffer,mainConfig->data_buffer_length,0,HARD_XFER_TIMEOUT,context);
       else
